Switch links to https to avoid mixed block

--- a/assets/fonts/manrope/manrope_fontface.css
+++ b/assets/fonts/manrope/manrope_fontface.css
@@ -1,35 +1,35 @@
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_extralight.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_extralight.woff2);
   font-weight: 200;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_light.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_light.woff2);
   font-weight: 300;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_regular.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_regular.woff2);
   font-weight: 400;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_medium.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_medium.woff2);
   font-weight: 500;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_semibold.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_semibold.woff2);
   font-weight: 600;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_bold.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_bold.woff2);
   font-weight: 700;
 }
 @font-face {
   font-family: Manrope;
-  src: url(http://soop.studio/assets/fonts/manrope/manrope_extrabold.woff2);
+  src: url(https://soop.studio/assets/fonts/manrope/manrope_extrabold.woff2);
   font-weight: 800;
 }
