--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,13 +4,14 @@ import "./HeaderMobile.css";
 
 import menuIcon from "../assets/icons/menu.svg";
 import closeIcon from "../assets/icons/close.svg";
+import { getLangSwitchPath, getPathForLang } from "../utils/get-lang";
 
 const menuIconUrl = menuIcon.src;
 const closeIconUrl = closeIcon.src;
 ---
 
 <header class="App-header">
-    <a class="logo-container" href="/">
+    <a class="logo-container" href={getPathForLang("/")}>
         <img src="/logo.svg" class="App-logo" alt="logo" />
     </a>
     <nav class="closed">
@@ -25,11 +26,13 @@ const closeIconUrl = closeIcon.src;
                     />
                 </a>
             </li>
-            <li><a href="/">Home</a></li>
-            <li><a href="/products">Produtos</a></li>
-            <li><a href="/about">Sobre Nós</a></li>
+            <li><a href={getPathForLang("/")}>Home</a></li>
+            <li><a href={getPathForLang("/products")}>Produtos</a></li>
+            <li><a href={getPathForLang("/about")}>Sobre Nós</a></li>
             <li class="location-switch">
-                <a href="/global" title="Ir para Soop Global"> 🌐 </a>
+                <a href={getLangSwitchPath()} title="Ir para Soop Global">
+                    🌐
+                </a>
             </li>
         </ul>
     </nav>
