feat: update product data from YAML

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BulletCard from "../components/BulletCard.astro";
 import ProductCard from "../components/ProductCard.astro";
-import { getLatestProducts } from "../product_data/get-product-data";
+import { getLatestProducts } from "../../product_data/get-product-data";
 import { getLang } from "../utils/get-lang";
 
 import PageLayout from "../layouts/PageLayout.astro";
