--- a/src/pages/products/[product_id]/files.astro
+++ b/src/pages/products/[product_id]/files.astro
@@ -6,7 +6,7 @@ import ThumbCaroussel from "../../../components/ThumbCaroussel.astro";
 import {
     getAllProductIds,
     getProductData,
-} from "../../../product_data/get-product-data";
+} from "../../../../product_data/get-product-data";
 import { getProductAssetPath } from "../../../utils/get-asset-path";
 import { getLang } from "../../../utils/get-lang";
 
