--- a/src/pages/products/[product_id]/index.astro
+++ b/src/pages/products/[product_id]/index.astro
@@ -6,7 +6,7 @@ import BulletList from "../../../components/BulletList.astro";
 import {
     getAllProductIds,
     getProductData,
-} from "../../../product_data/get-product-data";
+} from "../../../../product_data/get-product-data";
 import { getProductAssetPath } from "../../../utils/get-asset-path";
 import "../../../styles/product.css";
 import { getLang } from "../../../utils/get-lang";
