--- a/src/pages/products/[product_id]/specs.astro
+++ b/src/pages/products/[product_id]/specs.astro
@@ -7,7 +7,7 @@ import SpecTable from "../../../components/SpecTable.astro";
 import {
     getAllProductIds,
     getProductData,
-} from "../../../product_data/get-product-data";
+} from "../../../../product_data/get-product-data";
 import { getProductAssetPath } from "../../../utils/get-asset-path";
 import "../../../styles/specs.css";
 import { getLang } from "../../../utils/get-lang";
