--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -2,7 +2,7 @@
 import PageLayout from "../../layouts/PageLayout.astro";
 import ProductCard from "../../components/ProductCard.astro";
 import TitleSubtitle from "../../components/TitleSubtitle.astro";
-import { getAllProducts } from "../../product_data/get-product-data";
+import { getAllProducts } from "../../../product_data/get-product-data";
 import { getLang } from "../../utils/get-lang";
 import { getProductAssetPath } from "../../utils/get-asset-path";
 ---
